# long-context-hallucination-detection

./: README.md  main.py  pyproject.toml
data/: sample.json
src/: eval.py  model.py  split_chunks.py  train.py  train.sh
